FULL TIME SERIES GRAPH IMPLEMENTED, FIXING SPACING ISSUE

--- a/tabs.css
+++ b/tabs.css
@@ -46,3 +46,12 @@
               margin-left: 80px;
               margin-top: 50px;
             }
+            .TS1{
+              width: 100%;
+              height: 800px;
+            }
+            .TS2{
+              width: 45%;
+              height: 800px;
+              margin-left: 10px;
+            }
